--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
     width: 100%;
     height: 100%;
     position: relative;
-    perspective: var(--dept);
+    perspective: calc(var(--dept) * 2);
     transform-style: preserve-3d;
 }
 
@@ -236,7 +236,7 @@ btn:hover:active {
 }
 
 .transition-added {
-    transition-duration: 1.5s;
+    transition-duration: 5s;
     transition-timing-function: linear;
 }
 .plain-panel.transition-right {
