--- a/style.css
+++ b/style.css
@@ -3,11 +3,12 @@
     padding: 0;
     box-sizing: border-box;
     transform-style: preserve-3d;
+
 }
 
 :root {
-    --deptNeg: -1000px;
-    --dept: 1000px;
+    --deptNeg: -500px;
+    --dept: 500px;
 }
 
 body {
@@ -44,34 +45,17 @@ body {
 }
 
 .panel {
-    /* opacity: .5; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: black;
+    display: block;
     position: absolute;
     height: 100dvh;
     width: 100dvw;
-    /* gap: 10px; */
-    /* background-color: rgb(162, 191, 216); */
-    /* background: linear-gradient(to right, 
-        red 0%, red 20%, 
-        green 20%, green 40%, 
-        blue 40%, blue 60%, 
-        yellow 60%, yellow 80%, 
-        orange 80%, orange 100%); */
-    /* padding: 10px; */
-    border: 10px rgb(168, 137, 137) solid;
+    border: 1px rgb(0, 0, 0) solid;
     overflow: hidden;
     /* transform-style: preserve-3d; */
 
 }
 
-
-
 .panel.back {
-    /* width: 100dvw; */
-    /* background-color: orange; */
     transform: translate3d(0, 0, var(--deptNeg));
 }
 
@@ -83,19 +67,14 @@ body {
     top: 0px;
     transform-origin: top;
     transform: rotate3d(1, 0, 0, -90deg);
-    /* background-color: yellow; */
-    /* background: linear-gradient(to left); */
 }
 
 .panel.bottom {
-    display: block;
     bottom: 0px;
     transform-origin: bottom;
     transform: rotate3d(1, 0, 0, 90deg);
-    /* background-color: yellow; */
     overflow: visible;
     z-index: 100;
-    /* background: linear-gradient(to left); */
 }
 
 .panel.side-panels {
@@ -103,8 +82,6 @@ body {
 }
 
 .panel.left {
-    /* width: 100dvh; */
-    flex-direction: column;
     left: 0px;
     transform-origin: left;
     transform: rotate3d(0, 1, 0, 90deg);
@@ -114,54 +91,36 @@ body {
     right: 0px;
     transform-origin: right;
     transform: rotate3d(0, 1, 0, -90deg);
-    /* background-color: aqua; */
 }
-
-
-
-
 
 .panel-bottom__bg {
     display: grid;
     position: relative;
-    /* bottom: 20px; */
-    grid-template-areas:
-        "top top top"
-        "button button button"
-        "bottom bottom bottom"
-        "bottom bottom bottom";
+    grid-template-columns: 1fr;
+    grid-template-rows: 10% 1fr 40%;
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 80%;
     gap: 10px;
-    /* background-color: rgb(38, 58, 58); */
-    overflow: visible;
-    /* perspective: 10px; */
-    /* transform: translateZ(20px); */
+    /* overflow: visible; */
 }
 
 .panel-bottom__top {
-    color: #eee;
+    /* color: #eee; */
     position: relative;
-    grid-area: top;
+    /* grid-area: top; */
+    grid-row: 1/2;
     display: block;
     height: 100%;
-    width: inherit;
-    background-color: black;
-    visibility: hidden;
+    /* background-color: rgb(186, 181, 22); */
 }
 
 .panel-bottom__btn-container {
     display: flex;
     margin: 0 5% 0 5%;
-    
     justify-content: space-between;
     position: relative;
-    /* left: -50%; */
-    /* bottom: 100px; */
-    /* background-color: rgb(126, 117, 117); */
-    /* width: 200%; */
-    grid-area: button;
+    grid-row: 2;
 }
 
 .btn {
@@ -206,37 +165,30 @@ btn:hover:active {
     transition-duration: .1s;
 }
 
-.plain-panel {
+.panel-container-grid {
     position: absolute;
     display: grid;
-    /* display: flex; */
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(10, 1fr);
     z-index: -100;
-    width: 100%;
-    height: 100%;
-    /* background: linear-gradient(to bottom, 
-        red 0%, red 20%, 
-        green 20%, green 40%, 
-        blue 40%, blue 60%, 
-        yellow 60%, yellow 80%, 
-        orange 80%, orange 100%); */
     /* background-color: blueviolet; */
-    /* transition-duration: 8s; */
+
 }
 
-/* .testHi {
-    right: 0px;
-} */
-
-
-.plain-panel.placement-on-panel {
-    align-items: center;
-    justify-items: center;
-    /* opacity: .5;
-    background-color: aqua; */
+.panel-container-grid > .container-grid-content-area {
+    display: block;
+    /* height: fit-content; */
+    /* width: 100%; */
+    /* background-color: orange; */
+    /* justify-content: end; */
+    /* white-space: nowrap; */
+    /* grid-area: left | 1 / 1 / 2 / 2;
+    grid-column: 2; */
+    grid-area: 2 / 2 / 11 / 5;
+    /* overflow: scroll; */
 }
 
 .transition-added {
-    transition-duration: 5s;
     transition-timing-function: linear;
 }
 .plain-panel.transition-right {
@@ -245,26 +197,25 @@ btn:hover:active {
 
 .plain-panel.transition-left {
     transition-property: left;
-    transition-timing-function: linear;
+    /* transition-timing-function: ease-out; */
 }
 
 .plain-panel.transition-top {
     transition-property: top;
 }
+.plain-panel.transition-bottom {
+    transition-property: bottom;
+}
 
 .panel-span {
-    position: absolute;
+    display: block;
+    width: fit-content;
+    /* width: 100%; */
+
+    /* margin-left: auto; */
+
     font-variation-settings: "slnt" 0, "wdth" 45;
-    font-size: 160px;
     /* background-color: cadetblue; */
     transform-style: preserve-3d;
 
-}
-
-
-
-.panel-span.hi {
-    font-variation-settings: "slnt" 0, "wdth" 95;
-
-    /* background-color: antiquewhite; */
 }
